--- a/index.html
+++ b/index.html
@@ -46,13 +46,14 @@
 
         <div class="row">
             <div class="col-sm-4 d-flex justify-content-center">
-                <img src="./img/big.svg" alt="User profile's photo">
+                <a href=""><img src="./img/big.svg" alt="User profile's photo"></a>
             </div>
             <div class="col-sm-8 d-flex flex-column justify-content-center">
                 <div class="d-flex flex-row pb-3 pt-sm-0 pt-3">
                     <span class="font-weight-bold pr-4 d-flex align-items-center">name</span>
-                    <button type="button" class="btn btn-primary mr-2">Follow</button>
-                    <button type="button" class="btn btn-primary mr-2"><img src="./img/Polygon9.svg" alt=""></button>
+                    <a href=""><button type="button" class="btn btn-primary mr-2">Follow</button></a>
+                    <a href=""></a><button type="button" class="btn btn-primary mr-2"><img src="./img/Polygon9.svg"
+                            alt=""></button></a>
                     <div class="d-flex align-items-center">
                         <img class="pr-1" src="./img/dot.svg" alt="dot">
                         <img class="pr-1" src="./img/dot.svg" alt="dot">
@@ -60,12 +61,12 @@
                     </div>
                 </div>
                 <div class="d-flex py-3">
-                    <span class="font-weight-bold mr-1">79</span>
-                    <span class="mr-2">posts</span>
-                    <span class="font-weight-bold mr-1">379</span>
-                    <span class="mr-2">followers</span>
-                    <span class="font-weight-bold mr-1">179</span>
-                    <span class="mr-2">following</span>
+                    <a href=""><span class="font-weight-bold mr-1">79</span>
+                        <span class="mr-2">posts</span></a>
+                    <a href=""><span class="font-weight-bold mr-1">379</span>
+                        <span class="mr-2">followers</span></a>
+                    <a href=""><span class="font-weight-bold mr-1">179</span>
+                        <span class="mr-2">following</span></a>
                 </div>
                 <div class="text-block d-flex flex-column">
                     <span class="font-weight-bold"><strong>Name</strong></span>
@@ -80,26 +81,26 @@
             <div class="col-sm-6 d-flex flex-row py-5">
                 <div class="col-sm-3">
                     <div class="d-flex justify-content-center">
-                        <img src="./img/small.svg" alt="" class="border img-thumbnail rounded-circle">
+                        <a href=""><img src="./img/small.svg" alt="" class="border img-thumbnail rounded-circle"></a>
                     </div>
                     <div class="d-flex justify-content-center">
-                        <span>Name</span>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="d-flex justify-content-center">
-                        <img src="./img/small.svg" alt="" class="border img-thumbnail rounded-circle">
-                    </div>
-                    <div class="d-flex justify-content-center">
-                        <span>Name</span>
+                        <a href=""><span>Name</span></a>
                     </div>
                 </div>
                 <div class="col-sm-3">
                     <div class="d-flex justify-content-center">
-                        <img src="./img/small.svg" alt="" class="border img-thumbnail rounded-circle">
+                        <a href=""><img src="./img/small.svg" alt="" class="border img-thumbnail rounded-circle"></a>
                     </div>
                     <div class="d-flex justify-content-center">
-                        <span>Name</span>
+                        <a href=""><span>Name</span></a>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="d-flex justify-content-center">
+                        <a href=""></a><img src="./img/small.svg" alt="" class="border img-thumbnail rounded-circle"></a>
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <a href=""><span>Name</span></a>
                     </div>
                 </div>
             </div>
@@ -110,13 +111,13 @@
                 <div class="col-sm-6 d-flex flex-row justify-content-end align-items-baseline">
                     <img src="./img/posts-icon.svg" alt="Icon for post">
                     <div>
-                        <span class="font-weight-bold text-uppercase ml-1">posts</span>
+                        <a href=""><span class="font-weight-bold text-uppercase ml-1">posts</span></a>
                     </div>
                 </div>
                 <div class="col-sm-6 d-flex flex-row">
                     <img src="./img/posts-icon.svg" alt="Icon for post">
                     <div>
-                        <span class="text-uppercase ml-1">tagged</span>
+                        <a href=""><span class="text-uppercase ml-1">tagged</span></a>
                     </div>
                 </div>
             </div>
